@@ -1,3 +1,9 @@
+2004-05-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client-xml.ads, aws-client-xml-input_sources.ads,
+	  aws-client-xml-input_sources.adb:
+	New packages for support SAX parse just from client connection.
+
 2004-05-20  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser-xml.ads, templates_parser-xml.adb:
